# DRayTEannotator2

./: .gitignore  DEFAULT.config.yaml  Kklo.config.yaml  README.md  RepeatMaskerDefragSummary.py  Step1.RepModAnnotation.py  config.yaml  davidExtendConsRAM.pl  earlgrey_like_plots.R  environment.yml  pyproject.toml  setup.py  test.config.yaml
benchmarks/curated/: test_te_library.fa
benchmarks/expected/: test_te_library.expected.tsv
config/: domain_ontology.yaml
drayte/: selection.py  step1_repmodannotation.py  tables.py
drayte.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
drayte/classification/: benchmark.py  build_benchmark.py  classify.py  complexity_detect.py  detect_structure.py  dfam.py  dfammap.py  domainmap.py  evaluate.py  features.py  hmmer.py  homology.py  ids.py  io.py  ltr_detect.py  mmseqs.py  models.py  nonauto.py  nonauto_io.py  orfs.py  pipeline.py  rules.py  run.py  scoring.py  sine_detect.py  structure.py  structure_detect.py  structure_inputs.py  structure_merge.py  (+6 more)
extension/: __init__.py  filtering.py
test_classification/: classifications.tsv  families.fa  families.tsv  fasta_mode.tsv
tests/: test_classification.py  test_classification_benchmark.py  test_classification_cli.py  test_classification_dfam.py  test_classification_dfammap.py  test_classification_domainmap.py  test_classification_features.py  test_classification_hmmer.py  test_classification_ids.py  test_classification_ltr_detect.py  test_classification_mmseqs.py  test_classification_nonauto.py  test_classification_orfs.py  test_classification_pipeline.py  test_classification_repeatmasker_parser.py  test_classification_sine_detect.py  test_classification_structure.py  test_classification_structure_detect.py  test_classification_structure_merge.py  test_classification_tsd.py  test_classification_tsd_alignment.py  test_classification_tsd_from_repam.py
(+47 files in other folders)
