[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drayte"
version = "0.1.0"
description = "DRayTE TE annotation pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "biopython",
  "pandas",
  "matplotlib",
  "pybedtools",
  "pyfaidx",
  "tabulate",
]

[project.scripts]
drayte = "drayte.pipeline.runner:main"
drayte-classify = "drayte.classification.run:main"
drayte-structure = "drayte.classification.detect_structure:main"
drayte-evaluate = "drayte.classification.evaluate:main"
drayte-write-library = "drayte.classification.write_library:main"
TE-refine = "drayte.refinement.refine_repeatmasker:main"
TE-summary = "drayte.reporting.SummaryFilesGen:main"

[tool.setuptools.packages.find]
include = ["drayte*"]
